--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-  <link rel=
+  <link rel="stylesheet" 
 </head>
 <body>
   <header>
